@@ -1,3 +1,9 @@
+2009-07-09  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
+
+	Fixed compile error with openSSL
+	* src/bittorrent_helper.cc
+	* src/messageDigest.h
+
 2009-07-07  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
 
 	Removed bad code: setting certificate type priority to key
